--- a/index.html
+++ b/index.html
@@ -14,24 +14,26 @@
 		<div class="header">
 			<header>
 				<ul>
-					<li class="gilroy-bold">Home</li>
-					<li class="gilroy-bold">About me</li>
-					<li class="gilroy-bold">Skills</li>
-					<li class="gilroy-bold">Portfolio</li>
-					<li class="gilroy-bold">Contacts</li>
+					<li class="gilroy-bold desktop-li">Home</li>
+					<li class="gilroy-bold desktop-li">About me</li>
+					<li class="gilroy-bold desktop-li">Skills</li>
+					<li class="gilroy-bold desktop-li">Portfolio</li>
+					<li class="gilroy-bold desktop-li">Contacts</li>
 				</ul>
 				
 			</header>
 			<hr/>
 
 			<div class="pre-header">
-				<h1 class="gilroy-bold">Denis <br/> Novik</h1>
+				<h1 class="gilroy-bold name">Denis <br/> Novik</h1>
 				<p class="gilroy-medium">UX | UI designer <br/>
 					24 years old, Minsk</p>
 				<p class="leng">RU <span class="eng">| ENG</span></p>
+				<p class="gilroy-bold sandwich">|||</p>
 			</div>
 			<div class="header-image"> 
-				<img src="images\bg.png" alt="">
+				<img src="images\bg.png" alt="" class="bg1">
+				<img src="images\bg2.png" alt="" class="bg2">
 			</div>
 		</div>
 		<div class="about-me">
@@ -56,7 +58,7 @@
 			</div>
 		</div>
 		<div class="portfolio">
-			<h2 class="gilroy-bold">Portfolio</h2>
+			<h2 class="gilroy-bold portfolio-h2">Portfolio</h2>
 			<img src="images\portfolio1.png" alt="">
 			<p class="gilroy-medium">Online fashion store - Homepage</p>
 			<img src="images\portfolio2.png" alt="">
@@ -70,7 +72,14 @@
 				<h2 class="">Contacts</h2>
 				<p class="gilroy-medium">Want to know more or just chat?<br/>You are welcome!</p>
 				<button class="footer-button">send message</button>
-				
+				<div class="contacts-container">
+					<img src="images/linkin.png" alt="li">
+					<img src="images/inst.png" alt="inst">
+					<img src="images/be.png" alt="be">
+					<img src="images/ball.png" alt="ball">
+				</div>
+				<p class="gilroy-medium post-scrptium" > Like me on<br/>
+					LinkedIn, Instagram, Behance, Dribble</p>
 			</div>
 	</footer>
 </body>
